--- a/AGUASANTA.properties
+++ b/AGUASANTA.properties
@@ -1,4 +1,4 @@
-DIRECTORIO.SOURCE=/Users/Sojiroh/Downloads/aguita
+DIRECTORIO.SOURCE=C:\\Users\\Sojiroh\\Downloads\\Descargas\\asanta
 PRINTER.DEVICE.DEFAULT=PDFCreator
 PRINTER.COPIAS.DEFAULT=2
 MAIL.REPORT.TO=
